--- a/styles/style.css
+++ b/styles/style.css
@@ -6,20 +6,266 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Helvetica Neue', 'Arial', sans-serif;
+  font-size: 18px;
 }
 
+a {
+  text-decoration: none;
+}
+
+p, h1, h2, h3, h5 {
+  margin: 0;
+}
+
+.background__color_light {
+  background-color: #f2f2f2;
+}
+
+.background__color_dark {
+  background-color: #1f1f1f;
+}
+
+.font-weight_bold {
+  font-weight: 600;
+}
+
+.font-color_blue {
+  color: #2f80ed;
+}
+
+.list-style_none {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+
+}
+
+/* -------  header ----------- */
+
+
 .header {
+  display: flex;
+  position: relative;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
   /* выше установили ограничения для секции */
+
 }
+
+.logo {
+  width: 228px;
+  height: 32px;
+}
+
+.logo_place_header {
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  z-index: 5;
+
+}
+
+.header__title {
+  display: flex;
+  align-items: center;
+  width: 730px;
+  margin: 0 0 0 64px ;
+  z-index: 2;
+}
+
+.header__title__text {
+  font-size: 102px;
+  line-height: 96px;
+}
+
+.header__subtitle {
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  width: 388px;
+  z-index: 2;
+}
+
+.header__subtitle__text {
+  line-height: 25px;
+}
+
+.header__main-illustration {
+  position: absolute;
+  right: 0;
+  bottom:0;
+  width: 765px;
+  height: 608px;
+  z-index: 1;
+
+}
+
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
+  position: absolute;
+  top: 64px;
+  right: 0;
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+}
+
+
+/* -------  description ----------- */
+
+.description {
+  display: flex;
+  justify-content: center;
+  margin: 100px 0;
+}
+
+.two-columns {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.two-columns__brief {
+  width: 175px;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__paragraph {
+  margin-bottom: 30px;
+  font-size: 24px;
+  line-height: 34px;
+}
+
+
+.two-columns__paragraph:last-of-type {
+  margin-bottom: 0;
+}
+
+
+/* -------  digits ----------- */
+
+.digits {
+  margin-bottom: 100px;
+}
+
+.section-title {
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 60px;
+}
+
+
+.section-subtitle {
+  width: 60%;
+  margin: 20px auto 0 auto;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  z-index: 2;
+}
+
+
+.table {
+  display: flex;
+  justify-content: space-between;
+  width: 1100px;
+  margin: 0 auto;
+}
+
+.table__cell {
+  width: 250px;
+  margin-top: 60px;
+  z-index: 2;
+}
+
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+}
+
+.table__text {
+  margin-top: 20px;
+  line-height: 1.2;
+}
+
+
+
+/* -------  feynman ----------- */
+
+.feynman {
+  position: relative;
+  height: 890px;
+  padding-top: 100px;
+  box-sizing: border-box;
+  z-index: 1;
+
+}
+
+.feynman__title {
+  margin: 0 auto;
+  width: 648px;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+}
+
+.feynman__subtitle {
+  margin: 70px auto 0 auto;
+  text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feynman__photo {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 867px;
+  height: 637px;
+  background-image: url(../images/feynman.png);
+  z-index: -1;
+}
+
+.feynman__link {
+  position: absolute;
+  right: 48px;
+  top: 50%;
+  line-height: 51px;
+  font-size: 36px;
+  text-decoration: none;
+}
+
+/* -------  kaufman ----------- */
+
+.kaufman {
+  overflow: hidden;
+  position: relative;
+  padding: 90px 0;
+  z-index: 0;
+}
+
+.section-title_theme_dark {
+  display: block;
+  color: white;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -28,4 +274,69 @@
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.kaufman__triangle {
+  display: flex;
+  position: absolute;
+  width: 877px;
+  height: 877px;
+  top: 0;
+  right: -210px;
+  z-index: -1;
+}
+
+.kaufman__triangle__photo {
+  width: 100%;
+  height: 100%;
+  background-image: url(../images/kaufman-triangle.svg);
+  background-size: cover;
+}
+
+
+/* -------  footer ----------- */
+
+.footer {
+  box-sizing: border-box;
+  min-height: 350px;
+  padding: 60px 0 40px 0;
+  color: white;
+}
+
+.footer__columns {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  min-height: 250px;
+  margin: 0 auto;
+  flex-basis: 711px;
+}
+
+.footer__columns_content_copyright {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-basis: 711px;
+}
+
+.footer__autor {
+  margin: 18px 0;
+  line-height: 25px;
+}
+
+.footer__column-heading {
+  line-height: 30px;
+}
+
+.footer__column-links {
+  line-height: 30px;
+  margin: 20px 0 16px 0;
+}
+
+.footer__column-links_color_white {
+  color: white;
+}
+
+.footer__column-links_logo {
+  margin-right: 10px;
 }
