--- a/styles/style.css
+++ b/styles/style.css
@@ -10,39 +10,13 @@
   font-size: 18px;
 }
 
-a {
-  text-decoration: none;
-}
-
-p, h1, h2, h3, h5 {
-  margin: 0;
-}
-
-.background__color_light {
-  background-color: #f2f2f2;
-}
-
-.background__color_dark {
-  background-color: #1f1f1f;
-}
-
-.font-weight_bold {
-  font-weight: 600;
-}
-
-.font-color_blue {
-  color: #2f80ed;
-}
-
-.list-style_none {
+.list {
   list-style: none;
   padding: 0;
   margin: 0;
-
 }
 
 /* -------  header ----------- */
-
 
 .header {
   display: flex;
@@ -50,8 +24,8 @@ p, h1, h2, h3, h5 {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color: #f2f2f2;
   /* выше установили ограничения для секции */
-
 }
 
 .logo {
@@ -64,44 +38,42 @@ p, h1, h2, h3, h5 {
   top: 30px;
   left: 64px;
   z-index: 5;
-
 }
 
 .header__title {
   display: flex;
   align-items: center;
-  width: 730px;
+  max-width: 730px;
   margin: 0 0 0 64px;
-  z-index: 2;
-}
-
-.header__title__text {
   font-size: 102px;
   line-height: 96px;
+  font-weight: 600;
+  z-index: 2;
 }
 
 .header__subtitle {
   position: absolute;
   left: 64px;
   bottom: 30px;
-  width: 388px;
+  margin: 0;
+  max-width: 388px;
+  line-height: 25px;
   z-index: 2;
 }
 
-.header__subtitle__text {
-  line-height: 25px;
+.header__link {
+  color: #2f80ed;
+  text-decoration: none;
 }
 
 .header__main-illustration {
+  object-fit: cover;
   position: absolute;
   right: 0;
-  bottom:0;
+  bottom: 0;
   width: 765px;
   height: 608px;
-  z-index: 1;
-
 }
-
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
@@ -112,7 +84,6 @@ p, h1, h2, h3, h5 {
   width: 568px;
   background-color: #2f80ed;
 }
-
 
 /* -------  description ----------- */
 
@@ -126,14 +97,15 @@ p, h1, h2, h3, h5 {
   width: 80%;
   display: flex;
   justify-content: space-between;
-
 }
 
 .two-columns__brief {
+  margin: 0;
   width: 175px;
   font-size: 18px;
   line-height: 1.2;
   font-weight: normal;
+  color: #2f80ed;
 }
 
 .two-columns__main-text {
@@ -143,15 +115,18 @@ p, h1, h2, h3, h5 {
 
 .two-columns__paragraph {
   margin-bottom: 30px;
+  margin-top: 0;
   font-size: 24px;
   line-height: 34px;
 }
-
 
 .two-columns__paragraph:last-of-type {
   margin-bottom: 0;
 }
 
+.two-columns__span-accept {
+  font-weight: 600;
+}
 
 /* -------  digits ----------- */
 
@@ -165,8 +140,8 @@ p, h1, h2, h3, h5 {
   text-align: center;
   line-height: 1.15;
   font-size: 60px;
+  font-weight: 600;
 }
-
 
 .section-subtitle {
   width: 60%;
@@ -175,12 +150,11 @@ p, h1, h2, h3, h5 {
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  z-index: 2;
 }
-
 
 .table {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   width: 1100px;
   margin: 0 auto;
@@ -189,38 +163,41 @@ p, h1, h2, h3, h5 {
 .table__cell {
   width: 250px;
   margin-top: 60px;
-  z-index: 2;
 }
 
 .table__heading {
   line-height: 1.15;
   font-size: 24px;
+  font-weight: 600;
+  margin: 0;
 }
 
 .table__text {
   margin-top: 20px;
+  margin-bottom: 0;
   line-height: 1.2;
 }
-
-
 
 /* -------  feynman ----------- */
 
 .feynman {
   position: relative;
-  height: 890px;
+  min-height: 890px;
   padding-top: 100px;
+  background-color: #f2f2f2;
   box-sizing: border-box;
-  z-index: 1;
-
+  background-image: url(../images/feynman.png);
+  background-repeat: no-repeat;
+  background-position: bottom left;
 }
 
 .feynman__title {
   margin: 0 auto;
-  width: 648px;
+  max-width: 648px;
   text-align: center;
   line-height: 1.15;
   font-size: 120px;
+  font-weight: 600;
 }
 
 .feynman__subtitle {
@@ -231,16 +208,6 @@ p, h1, h2, h3, h5 {
   font-weight: normal;
 }
 
-.feynman__photo {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 867px;
-  height: 637px;
-  background-image: url(../images/feynman.png);
-  z-index: -1;
-}
-
 .feynman__link {
   position: absolute;
   right: 48px;
@@ -248,6 +215,8 @@ p, h1, h2, h3, h5 {
   line-height: 51px;
   font-size: 36px;
   text-decoration: none;
+  text-decoration: none;
+  color: #2f80ed;
 }
 
 /* -------  kaufman ----------- */
@@ -255,6 +224,7 @@ p, h1, h2, h3, h5 {
 .kaufman {
   overflow: hidden;
   position: relative;
+  background-color: #1f1f1f;
   padding: 90px 0;
   z-index: 0;
 }
@@ -283,22 +253,18 @@ p, h1, h2, h3, h5 {
   height: 877px;
   top: 0;
   right: -210px;
-  z-index: -1;
-}
-
-.kaufman__triangle__photo {
-  width: 100%;
-  height: 100%;
   background-image: url(../images/kaufman-triangle.svg);
   background-size: cover;
+  z-index: -1;
 }
-
 
 /* -------  footer ----------- */
 
 .footer {
+  display: flex;
   box-sizing: border-box;
   min-height: 350px;
+  background-color: #1f1f1f;
   padding: 60px 0 40px 0;
   color: white;
 }
@@ -307,9 +273,7 @@ p, h1, h2, h3, h5 {
   display: flex;
   justify-content: space-between;
   width: 90%;
-  min-height: 250px;
   margin: 0 auto;
-  flex-basis: 711px;
 }
 
 .footer__columns_content_copyright {
@@ -325,7 +289,9 @@ p, h1, h2, h3, h5 {
 }
 
 .footer__column-heading {
+  margin: 0;
   line-height: 30px;
+  font-weight: 600;
 }
 
 .footer__column-links {
@@ -333,10 +299,11 @@ p, h1, h2, h3, h5 {
   margin: 20px 0 16px 0;
 }
 
-.footer__column-links_color_white {
+.footer__column-link {
   color: white;
+  text-decoration: none;
 }
 
-.footer__column-links_logo {
+.footer__social-icon {
   margin-right: 10px;
 }
