--- a/styles/style.css
+++ b/styles/style.css
@@ -124,7 +124,7 @@
   margin-bottom: 0;
 }
 
-.two-columns__span-accept {
+.two-columns__span-accent {
   font-weight: 600;
 }
 
@@ -275,14 +275,14 @@
   margin: 0 auto;
 }
 
-.footer__columns_content_copyright {
+.footer__column_content_copyright {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   flex-basis: 711px;
 }
 
-.footer__autor {
+.footer__author {
   margin: 18px 0;
   line-height: 25px;
 }
@@ -290,6 +290,7 @@
 .footer__column-heading {
   margin: 0;
   line-height: 30px;
+  font-size: 18px;
   font-weight: 600;
 }
 
