--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,7 @@
+/* ------- normalize --------*/
+
+@import url(../styles/normalize.css);
+
 /* ------- page --------*/
 
 @import url(../blocks/page/page.css);
@@ -42,10 +46,10 @@
 
 /* ------- section --------*/
 
-@import url(../blocks/section/section-title.css);
-@import url(../blocks/section/section-subtitle.css);
-@import url(../blocks/section/_theme/section-title_theme_dark.css);
-@import url(../blocks/section/_theme/section-subtitle_theme_dark.css);
+@import url(../blocks/section-title/section-title.css);
+@import url(../blocks/section-subtitle/section-subtitle.css);
+@import url(../blocks/section-title/_theme/section-title_theme_dark.css);
+@import url(../blocks/section-subtitle/_theme/section-subtitle_theme_dark.css);
 
 /* ------- cards --------*/
 
@@ -112,7 +116,7 @@
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__columns/footer__columns.css);
-@import url(../blocks/footer/__columns/_content_copyright/footer__column_content_copyright.css);
+@import url(../blocks/footer/__column/_content/footer__column_content_copyright.css);
 @import url(../blocks/footer/__column-heading/footer__column-heading.css);
 @import url(../blocks/footer/__column-link/footer__column-link.css);
 @import url(../blocks/footer/__column-links/footer__column-links.css);
